--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <main class="main">
       <section class="hero">
         <div class="container">
-          <h2 class="hero__title">СК-сеть</h2>
+          <h2 class="hero__title"><span>СК</span>-сеть</h2>
           <p class="hero__description">
             Наша компания специализируется на выгодной скупке мобильной техники и электроники
           </p>
