create hero section

--- a/src/index.html
+++ b/src/index.html
@@ -39,15 +39,41 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="container">
-          <h2 class="hero__title"><span>СК</span>-сеть</h2>
-          <p class="hero__description">
-            Наша компания специализируется на выгодной скупке мобильной техники и электроники
-          </p>
+        <div class="container hero__container container__decor">
+          <div class="hero__info">
+            <h2 class="hero__title"><span>СК</span>-сеть</h2>
+            <p class="hero__type">
+              Комиссионный магазин, Выкуп техники и оборудования, Магазин электроники
+            </p>
+            <p class="hero__description">
+              Наша компания специализируется на выгодной скупке мобильной техники и электроники
+            </p>
+            <div class="hero__buttons">
+              <a class="hero__button button" href="#">Узнать больше</a>
+              <a class="hero__button button" href="#">Как доехать</a>
+            </div>
+          </div>
+          <div class="hero__decor-text text-decor">
+            <span>С</span>
+            <span>К</span>
+            <span>У</span>
+            <span>П</span>
+            <span>К</span>
+            <span>А</span>
+          </div>
         </div>
       </section>
-      <section class="about"></section>
-      <section class="product"></section>
+      <div class="img-decor">
+        <img
+          src="./assets/image/landing_background.png"
+          alt="Клавиатура от ноутбука с rgb подсветкой"
+        />
+      </div>
+      <section class="extras">
+        <div class="container">
+          <h3 class="extras__title">О нас</h3>
+        </div>
+      </section>
       <section class="services"></section>
       <section class="testimonials"></section>
       <section class="gallery"></section>
