Create new section + adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/image/logo.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/image/logo.png" />
     <title>Ск-сеть - Комиссионный магазин</title>
   </head>
   <body>
+    <!-- <div class="modal">
+      <div class="modal__window">
+        <h4 class="modal__window-title">Оставьте заявку или позвоните нам</h4>
+      </div>
+    </div> -->
     <div class="overlay" data-burger="overlay"></div>
     <header class="header">
       <h1 class="hidden">
@@ -42,12 +47,20 @@
       </div>
     </header>
     <main class="main">
+      <div class="text__decor text__decor--first">
+        <span>С</span>
+        <span>К</span>
+        <span>У</span>
+        <span>П</span>
+        <span>К</span>
+        <span>А</span>
+      </div>
       <section class="hero">
         <div class="container container__decor">
           <div class="hero__info">
             <h2 class="hero__title"><span>СК</span>-сеть</h2>
             <p class="hero__type">
-              Комиссионный магазин, Выкуп техники и оборудования, Магазин электроники
+              Комиссионный&nbsp;магазин, Выкуп&nbsp;техники и оборудования, Магазин&nbsp;электроники
             </p>
             <p class="hero__description">
               Наша компания специализируется на выгодной скупке мобильной техники и электроники
@@ -56,18 +69,49 @@
               <a class="hero__button button" href="#">Узнать больше</a>
               <a class="hero__button button" href="#">Как доехать</a>
             </div>
-          </div>
-          <div class="hero__decor-text text-decor">
-            <span>С</span>
-            <span>К</span>
-            <span>У</span>
-            <span>П</span>
-            <span>К</span>
-            <span>А</span>
+            <address class="hero__additionally">
+              <a
+                class="hero__additionally-link hero__additionally-geolocation"
+                href="https://yandex.ru/maps?ll=82.97444500000000289219315164%2C55.07368000000000307636582875&mode=routes&rtext=~55.07368000000000307636582875%2C82.97444500000000289219315164&z=17"
+                target="_blank"
+                ><svg
+                  class="meta__icon"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0.890137 6.99916C0.890137 3.13336 4.07416 0 8.0013 0C11.9284 0 15.1125 3.13424 15.1125 7.00005C15.1125 9.75385 13.4973 12.1361 11.148 13.2792C9.61286 14.0641 8.71392 14.8845 8.40014 15.7397C8.34298 15.8966 8.1683 16.001 8.0013 16.001C7.8343 16.001 7.6573 15.8966 7.60014 15.7397C7.28636 14.8845 6.38973 14.0641 4.85461 13.2792C2.50615 12.1352 0.890137 9.75296 0.890137 6.99916ZM8.0013 8.99917C9.12308 8.99917 10.0333 8.10406 10.0333 6.99916C10.0333 5.89426 9.12308 5.00003 8.0013 5.00003C6.87951 5.00003 5.96928 5.89515 5.96928 7.00005C5.96928 8.10495 6.87951 9.00006 8.0013 9.00006V8.99917Z"
+                  ></path>
+                </svg>
+                <span>Новосибирск, улица Авиастроителей, 15</span></a
+              >
+              <a class="hero__additionally-link hero__additionally-working-hours" href="#"
+                ><svg
+                  class="meta__icon"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM12.018 11.0752C12.3357 10.6234 12.227 9.99963 11.7752 9.68197L9 7.73067V4C9 3.44772 8.55229 3 8 3C7.44772 3 7 3.44772 7 4V8.25C7 8.57557 7.15849 8.88077 7.42482 9.06803L10.6248 11.318C11.0766 11.6357 11.7004 11.527 12.018 11.0752Z"
+                  ></path>
+                </svg>
+                Открыто / Закрыто</a
+              >
+            </address>
           </div>
         </div>
       </section>
-      <!-- <div class="img-decor">
+      <div class="img-decor">
         <img
           src="./assets/image/landing_background.png"
           alt="Клавиатура от ноутбука с rgb подсветкой"
@@ -76,10 +120,175 @@
       <section class="extras">
         <div class="container">
           <h3 class="extras__title">О нас</h3>
+          <ul class="extras__list">
+            <li class="extras__item">
+              <span class="extras__item-icon" aria-label="Иконка Машины которая означает самовывоз">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+                  <g
+                    fill="none"
+                    stroke="#fff"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1.5"
+                    color="#fff"
+                  >
+                    <path
+                      d="M19 17.5c1.424 0 2.063 0 2.515-.487q.03-.032.057-.065c.43-.513.43-1.32.43-2.936c0-1.225 0-1.837-.24-2.354c-.251-.54-.703-.877-1.654-1.565c-.945-.684-1.616-1.452-2.256-2.51c-.912-1.51-1.369-2.265-2.053-2.674S14.308 4.5 12.694 4.5h-.7m-3.002 13h6.005"
+                    />
+                    <path
+                      d="m13.996 4.5l.746 3.48c.43 2.003.5 3.52 2.788 3.52h3.972m.5 3h-1m-9.007-10v13m5.004 2A2 2 0 1 0 17 15.499a2 2 0 0 0 0 4.001m-10.008 0a2 2 0 1 0 .001-4.001a2 2 0 0 0-.001 4.001"
+                    />
+                    <path
+                      d="M11.99 11.503H1.998v4.71c0 .375.693.816 1.315 1.11c.217.103.455.15.695.156l.981.028"
+                    />
+                  </g>
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Самовывоз</h4>
+            </li>
+            <li class="extras__item">
+              <span class="extras__item-icon" aria-label="Иконка означающая шоу-рум">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+                  <path
+                    fill="#fff"
+                    fill-rule="evenodd"
+                    d="M7.307 1.25c-.801 0-1.35 0-1.84.133a3.75 3.75 0 0 0-2.36 1.936c-.227.452-.334.991-.491 1.777l-.62 3.098a3.79 3.79 0 0 0 .754 3.117v2.745c0 1.838 0 3.294.153 4.433c.158 1.172.49 2.121 1.238 2.87c.748.748 1.697 1.08 2.87 1.238c1.139.153 2.595.153 4.432.153h1.113c1.838 0 3.294 0 4.433-.153c1.172-.158 2.121-.49 2.87-1.238c.748-.749 1.08-1.698 1.238-2.87c.153-1.14.153-2.595.153-4.433v-2.744a3.79 3.79 0 0 0 .753-3.118l-.62-3.098c-.156-.786-.264-1.325-.49-1.777a3.75 3.75 0 0 0-2.361-1.936c-.489-.133-1.038-.133-1.84-.133zm10.961 11.5a3.8 3.8 0 0 0 1.482-.298V14c0 1.907-.002 3.262-.14 4.29c-.135 1.005-.389 1.585-.812 2.008s-1.003.677-2.01.812a16 16 0 0 1-1.538.114v-2.756c0-.44 0-.82-.028-1.13c-.03-.33-.096-.656-.274-.963a2.25 2.25 0 0 0-.823-.824c-.307-.177-.633-.243-.963-.273c-.31-.028-.69-.028-1.13-.028h-.065c-.44 0-.819 0-1.13.028c-.33.03-.655.096-.962.273a2.25 2.25 0 0 0-.824.824c-.177.307-.243.633-.273.962c-.028.312-.028.691-.028 1.13v2.757a16 16 0 0 1-1.54-.114c-1.005-.135-1.585-.389-2.008-.812s-.677-1.003-.812-2.009c-.139-1.027-.14-2.382-.14-4.289v-1.548a3.81 3.81 0 0 0 4.588-1.306A3.9 3.9 0 0 0 12 12.75a3.9 3.9 0 0 0 3.162-1.604a3.8 3.8 0 0 0 3.106 1.604m-8.018 8.498q.582.002 1.25.002h1q.668 0 1.25-.002V18.5c0-.481-.001-.792-.022-1.027c-.02-.225-.055-.307-.079-.348a.75.75 0 0 0-.274-.274c-.041-.024-.123-.058-.348-.079A13 13 0 0 0 12 16.75c-.481 0-.792 0-1.027.022c-.226.02-.307.055-.348.079a.75.75 0 0 0-.275.274c-.023.04-.058.123-.078.348c-.021.235-.022.546-.022 1.027zM8.67 2.75H7.418c-.954 0-1.285.007-1.553.08a2.25 2.25 0 0 0-1.416 1.161c-.125.249-.196.571-.383 1.507l-.598 2.99a2.31 2.31 0 1 0 4.562.683l.069-.686l.004-.042zm.921 5.875l.588-5.875h3.642l.584 5.842a2.417 2.417 0 1 1-4.814.033m8.544-5.795c-.268-.073-.599-.08-1.553-.08h-1.254l.643 6.42a2.309 2.309 0 1 0 4.561-.682l-.597-2.99c-.188-.936-.259-1.258-.383-1.507a2.25 2.25 0 0 0-1.417-1.161"
+                    clip-rule="evenodd"
+                  />
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Шоу-рум</h4>
+            </li>
+            <li class="extras__item">
+              <span
+                class="extras__item-icon"
+                aria-label="Иконка Означающая что можно оплачивать картой"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30px"
+                  height="30px"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    fill="none"
+                    stroke="#fff"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M12 19H6a3 3 0 0 1-3-3V8a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v4.5M3 10h18m-5 9h6m-3-3l3 3l-3 3M7.005 15h.005M11 15h2"
+                  />
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Оплата картой</h4>
+            </li>
+            <li class="extras__item">
+              <span class="extras__item-icon" aria-label="Иконка Означающая что есть парковка">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30px"
+                  height="30px"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    fill="#fff"
+                    d="M13.5 3H5v18h4v-5h4.5c3.584 0 6.5-2.916 6.5-6.5S17.084 3 13.5 3m0 9H9V7h4.5C14.879 7 16 8.121 16 9.5S14.879 12 13.5 12"
+                  />
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Парковка</h4>
+            </li>
+            <li class="extras__item">
+              <span
+                class="extras__item-icon"
+                aria-label="Иконка Означающая что есть парковка для людей с инвалидностью"
+              >
+                <svg width="30" height="30" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <g transform="scale(0.0488)">
+                    <path
+                      fill="white"
+                      d="M225.315,96.963c26.748,0,48.479-21.706,48.479-48.481C273.794,21.699,252.063,0,225.315,0 
+                      c-26.779,0-48.492,21.699-48.492,48.482C176.823,75.257,198.536,96.963,225.315,96.963z"
+                    />
+                    <path
+                      fill="white"
+                      d="M300.233,371.688c-12.883,44.732-54.121,77.583-102.946,77.583c-59.126,0-107.209-48.085-107.209-107.193 
+                      c0-43.754,26.396-81.413,64.066-98.054V198.58c-61.69,18.581-106.764,75.847-106.764,143.498 
+                      c0,82.649,67.247,149.897,149.906,149.897c60.238,0,112.159-35.801,135.966-87.169l-16.926-33.255 
+                      C311.575,371.59,306.071,371.64,300.233,371.688z"
+                    />
+                    <path
+                      fill="white"
+                      d="M441.48,429.237l-64.939-127.672c-4.847-9.553-14.645-15.566-25.363-15.566h-83.173v-18.966h71.582 
+                      c7.148,0,13.156-3.736,17.037-9.118c2.522-3.506,4.316-7.579,4.316-12.236c0-11.789-9.549-21.351-21.353-21.351h-43.125h-28.457 
+                      V160c0-17.692-13.118-42.704-42.689-42.704c-23.584,0-42.703,19.122-42.703,42.704v139.372c0,24.058,19.503,43.561,43.562,43.561 
+                      h78.265h29.284l57.024,112.117c5.011,9.875,15.011,15.573,25.389,15.573c4.35,0,8.761-0.994,12.883-3.104 
+                      C443.054,460.401,448.628,443.251,441.48,429.237z"
+                    />
+                  </g>
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Парковка для людей с инвалидностью</h4>
+            </li>
+            <li class="extras__item">
+              <span
+                class="extras__item-icon"
+                aria-label="Иконка Означающая что есть Скупка и продажа техники"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+                  <g fill="none" fill-rule="#fff">
+                    <path
+                      d="m12.594 23.258l-.012.002l-.071.035l-.02.004l-.014-.004l-.071-.036q-.016-.004-.024.006l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.016-.018m.264-.113l-.014.002l-.184.093l-.01.01l-.003.011l.018.43l.005.012l.008.008l.201.092q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.003-.011l.018-.43l-.003-.012l-.01-.01z"
+                    />
+                    <path
+                      fill="#fff"
+                      d="M19 4a3 3 0 0 1 2.995 2.824L22 7v10a3 3 0 0 1-2.824 2.995L19 20H5a3 3 0 0 1-2.995-2.824L2 17V7a3 3 0 0 1 2.824-2.995L5 4zm1 6H4v7a1 1 0 0 0 .883.993L5 18h14a1 1 0 0 0 .993-.883L20 17zm-5.293 1.464l1.828 1.829a1 1 0 0 1 0 1.414l-1.828 1.828a1 1 0 1 1-1.414-1.414l.12-.121H9a1 1 0 1 1 0-2h4.414l-.121-.121a1 1 0 0 1 1.414-1.415M19 6H5a1 1 0 0 0-1 1v1h16V7a1 1 0 0 0-1-1"
+                    />
+                  </g>
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Скупка и продажа техники</h4>
+            </li>
+            <li class="extras__item">
+              <span
+                class="extras__item-icon"
+                aria-label="Иконка Означающая что можно приходить с собакой"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="33.75px"
+                  height="30px"
+                  viewBox="0 0 576 512"
+                >
+                  <path
+                    fill="#fff"
+                    d="m309.6 158.5l23.1-138.7C334.6 8.4 344.5 0 356.1 0c7.5 0 14.5 3.5 19 9.5L392 32h52.1c12.7 0 24.9 5.1 33.9 14.1L496 64h56c13.3 0 24 10.7 24 24v24c0 44.2-35.8 80-80 80h-69.3l-5.1 30.5zM416 256.1V480c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32V364.8c-24 12.3-51.2 19.2-80 19.2s-56-6.9-80-19.2V480c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V249.8c-28.8-10.9-51.4-35.3-59.2-66.5L1 167.8c-4.3-17.1 6.1-34.5 23.3-38.8s34.5 6.1 38.8 23.3l3.9 15.5C70.5 182 83.3 192 98 192h205.8zM464 80a16 16 0 1 0-32 0a16 16 0 1 0 32 0"
+                  />
+                </svg>
+              </span>
+              <h4 class="extras__item-title">Можно с собакой</h4>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="services">
+        <div class="container">
+          <h3 class="services__title">Каталог</h3>
+
+        </div>
+      </section>
+      <!-- <section class="testimonials">
+        <div class="container">
+          <h3 class="testimonials__title">Отзывы</h3>
+          <div class="testimonials__slider swiper">
+            <ul class="testimonials__list swiper-wrapper">
+              <li class="testimonials__item swiper-slide">
+                <h4></h4>
+              </li>
+            </ul>
+          </div>
         </div>
       </section> -->
-      <section class="services"></section>
-      <section class="testimonials"></section>
       <section class="gallery"></section>
       <section class="contacts"></section>
     </main>
